--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.1.0",
+    "lint": "^0.7.0",
     "merge-graphql-schemas": "^1.7.8"
   }
 }
