--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "npx babel-node extra",
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "nodemon --exec babel-node src",
-    "lint": "./node_modules/tslint/bin/tslint -c tslint.json -p tsconfig.json --exclude 'node_modules/**/*.{j,t}s'",
-    "lint:fix": "npm run lint --fix",
-    "start": "tsc-watch --project . --onSuccess \"npm run nodemon\""
+    "lint": "./node_modules/.bin/eslint src",
+    "lint:fix": "npx eslint --fix src",
+    "start": "npm run nodemon"
   },
   "repository": {
     "type": "git",
@@ -29,18 +29,21 @@
     "nodemon": "^2.0.4",
     "dotenv": "^8.2.0",
     "husky": "^4.2.1",
-    "tsc-watch": "^4.1.0",
-    "tslint": "^6.0.0",
-    "typescript": "^3.7.5"
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-babel": "^5.3.0"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@mobylogix/merge-graphql-schemas": "^1.5.4",
+    "apollo-server": "^2.14.3",
     "apollo-server-express": "^2.14.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "eslint": "^7.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.1.0",
-    "lint": "^0.7.0",
-    "merge-graphql-schemas": "^1.7.8"
+    "merge-graphql-schemas": "^1.7.8",
+    "promise": "^8.1.0"
   }
 }
