--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@mobylogix/merge-graphql-schemas": "^1.5.4",
+    "apollo-datasource-rest": "^0.9.2",
     "apollo-server": "^2.14.3",
     "apollo-server-express": "^2.14.2",
     "body-parser": "^1.19.0",
